Logs/02-10-13_13-39-05.txt
2013-02-10 13:39:05.400000: ENGINE starting
2013-02-10 13:39:05.403000: ENGINE loading STUDENT ENGINE part 3
2013-02-10 13:39:05.407000: ERROR: invalid syntax (__init__.py, line 309)
2013-02-10 13:39:05.411000: TRACE:
Traceback (most recent call last):
  File ".\Engine\controller.py", line 59, in __init__
  File "C:\Python32\lib\importlib\__init__.py", line 124, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "C:\Python32\lib\importlib\_bootstrap.py", line 821, in _gcd_import
    loader.load_module(name)
  File "C:\Python32\lib\importlib\_bootstrap.py", line 436, in load_module
    return self._load_module(fullname)
  File "C:\Python32\lib\importlib\_bootstrap.py", line 141, in decorated
    return fxn(self, module, *args, **kwargs)
  File "C:\Python32\lib\importlib\_bootstrap.py", line 330, in _load_module
    code_object = self.get_code(name)
  File "C:\Python32\lib\importlib\_bootstrap.py", line 413, in get_code
    dont_inherit=True)
  File "C:\Users\Joe\Documents\GitHub\Quoridor\StudentEngines\jak3122\__init__.py", line 309
    jumped_square =
                   ^
SyntaxError: invalid syntax

